[package]
name = "chain_lib"
version = "0.1.0"
authors = ["snwallet <snwallet@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
sha256 = "1.0.2"
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
rand = "0.8.3"
once_cell = "1.7.2"

